lintian (2.5.4) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - data.tar.xz-member-without-dpkg-pre-depends
      - gzip-file-is-not-multi-arch-same-safe
      - init.d-script-does-not-implement-optional-option
      - init.d-script-missing-lsb-description
      - missing-build-dependency-for-dh-addon
      - package-depends-on-lower-priority-package
      - package-would-benefit-from-build-arch-targets
      - python-depends-but-no-python-helper
      - python3-depends-but-no-python3-helper
      - transitional-package-should-be-oldlibs-extra

  * checks/*:
    + [JW] Replace common_data.pm with Lintian::Check.
    + [NT] Remove some unused "use lib <expr>" from various checks.
    + [NT] Use Lintian::Collect::Group to find direct dependencies.
  * checks/binaries:
    + [JW] Allow binaries to use "/usr/lib/$srcpkg/" in RPATHs.
      (Closes: #642092)
    + [JW] Fixed a false-positive when using the multiarch dir in
      RPATH.  (Closes: #646817)
  * checks/changes-file{,.desc}:
    + [NT] Added the "precise" to the list of Ubuntu distributions.
      Thanks to Loïc Minier for the patch.
    + [NT] Accept release codename in the changes file.  Thanks to
      Julien Cristau for the report.  (Closes: #637540)
  * checks/circular-deps{,.desc}:
    + [NT] Renamed to group-checks{,.desc}.
  * checks/group-checks{,.desc}:
    + [NT] Added check for depending on lower priority packages built
      from the same source.  Only strong dependencies are considered.
      Thanks to Neil Williams for the report.  (Closes: #387166)
  * checks/common_data.pm:
    + [JW] Merged into Lintian::Check.
  * checks/cruft{,.desc}:
    + [NT] Escape path when using them in regexes.  (Closes: #642902)
    + [NT] Extended the description of the tag for non-native packages
      with native versions.  Thanks to Jari Aalto for the report.
      (Closes: #580048)
  * checks/copyright.desc:
    + [RG,NT] Clarified that the PHP 2.x license is only for the PHP