@@ -1,0 +1,4 @@
+# Manually maintained list of known e-mail addresses which bounce e-mails from
+# role accounts.
+
+ubuntu-devel-discuss@lists.ubuntu.com
