@@ -2,7 +2,8 @@
 Profile: ubuntu/main
 Extends: debian/main
 Disable-Tags: debian-changelog-file-is-a-symlink,
- lzma-deb-archive, no-upstream-changelog,
+ lzma-deb-archive, maintainer-address-causes-mail-loops-or-bounces,
+ no-upstream-changelog, uploader-address-causes-mail-loops-or-bounces,
  upstart-job-in-etc-init.d-not-registered-via-update-rc.d
 
 # Serious as it may break Lucid upgrade path
