@@ -1,0 +1,9 @@
+Testname: fields-maintainer-bounces
+Sequence: 6000
+Version: 1.0
+Description: test e-mail addresses which are known to bounce e-mails
+# To avoid NMU warnings / having a changelog.in
+Author: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+Test-For:
+ uploader-address-causes-mail-loops-or-bounces
+ maintainer-address-causes-mail-loops-or-bounces
